--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.3.72'
     repositories {
         google()
         jcenter()
@@ -8,7 +9,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
-        
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -24,4 +26,18 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+ext{
+    compileSdkVersion = 29
+    buildToolsVersion = "29.0.2"
+    targetSdkVersion = compileSdkVersion
+    minSdkVersion = 22
+    glide = '4.8.0'
+    smartrefresh = '1.1.0'
+    retrofit2 = '2.4.0'
+    rxjava2 = '2.0.1'
+    okhttp3 = '3.9.1'
+    ok3log = okhttp3
+    butterknife = '10.2.0'
+
 }
