--- a/frame/build.gradle
+++ b/frame/build.gradle
@@ -1,9 +1,14 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 
     defaultConfig {
         minSdkVersion 22
@@ -32,21 +37,27 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     api project(path: ':data')
-
+    api project(path: ':utils1')
 
     //加载图片的依赖包
     api 'com.github.bumptech.glide:glide:4.8.0'
-
 //下拉刷新和加载更多依赖包
-    api 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0'
+    api "com.scwang.smartrefresh:SmartRefreshLayout:$smartrefresh"
 
-//侧滑的依赖
     api 'com.android.support:design:29.0.0'
 
     //RxJava和Retrofit依赖
-    api 'com.squareup.retrofit2:retrofit:2.4.0'
-    api 'com.squareup.retrofit2:converter-gson:2.4.0' // 必要依赖，解      析json字符所用
-    api 'com.squareup.retrofit2:adapter-rxjava2:2.4.0' // 必要依赖，和     Rxjava结合必须用到，下面会提到
-    api "io.reactivex.rxjava2:rxjava:2.1.3" // 必要rxjava2依赖
-    api "io.reactivex.rxjava2:rxandroid:2.0.1" // 必要rxandrroid依赖，切    线程时需要用到
+    api "com.squareup.retrofit2:retrofit:$retrofit2"
+    api "com.squareup.retrofit2:converter-gson:$retrofit2" // 必要依赖，解      析json字符所用
+    api "com.squareup.retrofit2:adapter-rxjava2:$retrofit2" // 必要依赖，和     Rxjava结合必须用到，下面会提到
+    api "io.reactivex.rxjava2:rxjava:$rxjava2" // 必要rxjava2依赖
+    api "io.reactivex.rxjava2:rxandroid:$rxjava2" // 必要rxandrroid依赖，切    线程时需要用到
+
+
+    api "com.squareup.okhttp3:logging-interceptor:$ok3log"
+    implementation "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
