--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,7 @@ dependencies {
     implementation project(path: ':frame')
     implementation 'androidx.navigation:navigation-fragment:2.0.0-rc02'
     implementation 'androidx.navigation:navigation-ui:2.0.0-rc02'
+    //banner依赖
+    implementation 'com.youth.banner:banner:1.4.10'  //最新版本
+    implementation "org.greenrobot:eventbus:$eventbus"
 }
