--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     //banner依赖
     implementation 'com.youth.banner:banner:1.4.10'  //最新版本
     implementation "org.greenrobot:eventbus:$eventbus"
+    implementation "com.flyco.tablayout:FlycoTabLayout_Lib:$tablayout"
 }
